# VakilSahab.ai

./: README.md  docker-compose.yml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  destroy-backend.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  lambda_handler.py  pyproject.toml  requirements.txt  template.example.yml
backend/alembic/: env.py
backend/src/: app.py  models.py
backend/src/core/: config.py  llm.py  ocr.py  pinecone.py  redis.py
backend/src/lib/: pinecone.py
backend/src/models/: query.py
backend/src/routes/: main_context.py  query.py  session.py  upload.py  user.py
backend/src/types/: session.py
backend/src/utils/: document_handler.py  session_manager.py  text_processing.py
backend/terraform/: main.tf  output.tf  variables.tf
frontend/: .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json
frontend/actions/: lawyer.action.ts  user.action.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(main)/: layout.tsx
frontend/app/chatbot/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/atoms/: brand-logo.tsx
frontend/components/ui/: input.tsx
frontend/contexts/: app-provider.tsx  index.tsx  theme-provider.tsx
frontend/contexts/chatbot-provider/: index.tsx  use-handle-query.ts
frontend/db/: schema.ts
frontend/drizzle/meta/: _journal.json
frontend/hooks/: use-is-mobile.ts
frontend/lib/: fetch-sse.ts
frontend/lib/icons/: normal.tsx
frontend/types/: index.ts
(+15 files in other folders)
