[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "huggingface-hub[hf-xet]>=0.30.2",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.1.4",
    "langchain-huggingface>=0.1.2",
    "mistralai>=1.7.0",
    "pinecone>=6.0.2",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pymupdf>=1.25.5",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
